--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Proyecto de sitio Web 2022 -16-01</h1>
     <h3>javier valbuena <br>produccion de audio <br>20 de febrero 2022 <br>3144592259</h3>
     <a href="fase2/design.html"> Fase2</a>
+    <a href="fase3/index.html"> Fase3</a>
 </body>
 </html>
